--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>what means fyi?</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="info-circle.svg">
+</head>
 </html>
-<body style="user-select: none;">
-    <h1 style="font-family: 'Comic Sans MS', Chalkboard, serif;">what means fyi?</h1>
-    <p style="font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;" >for your information</p>
+<body>
+    <h1>what means fyi?</h1>
+    <p>for your information</p>
 </body>
 </html>
